<resources>
    <string name="app_name">Evazu</string>
    <string name="title_activity_maps">Map</string>
    <string name="enter_email">ENTER EMAIL</string>
    <string name="login">LOGIN</string>
    <string name="logo_of_company">Logo of Company</string>
    <string name="ride">RIDE</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="start">Start</string>
    <string name="your">Your</string>
    <string name="adventure">Adventure</string>
    <string name="register_here"><u>Register Here</u></string>
    <string name="nav_header_title">Evazu</string>
    <string name="nav_header_subtitle">Evazu Description</string>
    <string name="blue_circle">Blue Circle</string>
    <string name="scooter">Scooter</string>
    <string name="dash">Dash</string>
    <string name="white_circle">White Circle</string>
    <string name="take_a_tour">Take a tour</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="not_a_member_yet">Not a Member Yet!</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="signUp">Sign Up</string>
    <string name="dont_account">Don\'t Have an Account!</string>
    <string name="already_a_member">Already a Member!</string>
    <string name="log_in"><u>Log in</u></string>
    <string name="reset_password">Reset Password</string>
    <string name="evazu_is_coming_soon">Evazu is Coming Soon!</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions!]]></string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.</string>
    <string name="rental">Rental Agreement</string>
    <string name="terms_first">I certify that I have read and espressly agree to the terms and conditions of Evazu.</string>
    <string name="terms_second">I certify that I am the Rider, I am 18 years old or over, I will wear a helmet where required by law.</string>
    <string name="i_agree">I Agree</string>
    <string name="sent_verification">We have sent you a verification code via SMS to the registered mobile number.</string>
    <string name="enter_code">Enter Code Here</string>
    <string name="continue_text">Continue</string>
    <string name="resend_code"><u>Resend Code</u></string>
    <string name="retake_selfie"><u>Retake Selfie</u></string>
    <string name="take_selfie">Take Selfie</string>
    <string name="rental_agreement"><u>Rental Agreement</u></string>
    <string name="terms_of_service"><u>Terms of Service</u></string>
    <string name="payments">Payments</string>
    <string name="ride_history">Ride History</string>
    <string name="pay_per_ride">Pay Per Ride</string>
    <string name="become_partner">Become Partner</string>
    <string name="help">Help</string>
    <string name="about_us">About Us</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="retake"><u>Retake</u></string>
    <string name="how_can_we_help_you">HOW CAN WE \nHELP YOU?</string>
    <string name="version">Version 1.0</string>
    <string name="title_activity_become_partner">BecomePartner</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="charger">Charger</string>
    <string name="franchisee">Franchisee</string>
    <string name="charge_and_earn">Charge and Earn</string>
    <string name="click_on_ticket">(Click on Ticket to Choose Plan)</string>
    <string name="for_joining_evazu_charger">For Joining <b>EVAZU CHARGER</b></string>
    <string name="our_executive_will_contact_you_soon">Our Executive Will Contact You Soon</string>
    <string name="thank_you">Thank You!</string>
    <string name="become_franchisee">Become Franchisee \n&amp; Earn Up To \nRs. 30,000</string>
    <string name="paytm_not_linked">Paytm Not Linked</string>
    <string name="colon">:</string>
    <string name="click_here">Click Here</string>
    <string name="front_side">Front Side</string>
    <string name="back_side">Back Side</string>
    <string name="enter_your_aadhaar_no">Enter Your Aadhaar No.</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="upload">Upload</string>
    <string name="aadhaar_icon">Aadhaar Icon</string>
    <string name="aadhaar_image_placeholder">Aadhaar Image Placeholder</string>
    <string name="hint_card">1234-5678-1234</string>
    <string name="troubleshoot">Troubleshoot</string>
    <string name="company_logo">Company Logo</string>
    <string name="background_image">Background Image</string>
    <string name="permissions">Permissions</string>
    <string name="camera">1. Camera</string>
    <string name="camera_summary">This permission is required to take your photos and scan QR code for booking a vehicle.</string>
    <string name="read_sms">2. Read SMS</string>
    <string name="read_sms_summary">This permission is required for auto-retrieval of OTP sent to you for phone verification.</string>
    <string name="location">3. Location</string>
    <string name="location_summary">This permission is required to access maps for getting the location of the vehicle and navigation.</string>
    <string name="grant">Grant</string>
    <string name="permissions_icon">Permissions Icon</string>

    <string name="ride_shortcut_short_label1">Ride Now</string>
    <string name="ride_shortcut_long_label1">Book Ride Now</string>
    <string name="ride_disabled_message1">Cannot Ride Now</string>


</resources>
