<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fdb41b"
    tools:context=".Main2Activity">

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="206dp"
        android:layout_height="43.33dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/login_bg2"
        android:fontFamily="@font/montserrat"
        android:text="@string/login"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/white_circle"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/dont_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/dont_account"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/register"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <TextView
        android:id="@+id/register"
        android:layout_width="123dp"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/register_here"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/dont_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dont_account"
        app:layout_constraintTop_toTopOf="@+id/dont_account"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/blue_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/blue_circle"
        android:src="@drawable/circle_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <ImageView
        android:id="@+id/white_circle"
        android:layout_width="255dp"
        android:layout_height="420.67dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/white_circle"
        android:src="@drawable/white_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/blue_circle" />

    <ImageView
        android:id="@+id/scooter"
        android:layout_width="309.67dp"
        android:layout_height="258dp"
        android:layout_alignBottom="@+id/white_circle"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/scooter"
        android:src="@drawable/scooter"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="@+id/white_circle"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/dash"
        android:layout_width="108.67dp"
        android:layout_height="14.67dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/dash"
        android:src="@drawable/dash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/white_circle" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/start"
        android:textColor="@color/text_color"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/white_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blue_circle"
        app:layout_constraintVertical_bias="0.217" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/your"
        android:textColor="@color/text_color"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/adventure"
        android:textColor="@color/text_color"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


</android.support.constraint.ConstraintLayout>