<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".TermsAndConditions">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottomLinearLayout"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:text="@string/dummy_text"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:buttonTint="@color/black"
            android:text="@string/terms_first"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:buttonTint="@color/black"
            android:text="@string/terms_second"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/continueButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:alpha="0.2"
            android:enabled="false"
            android:background="@drawable/login_bg"
            android:text="@string/i_agree"
            android:textSize="20sp" />


    </LinearLayout>

</RelativeLayout>