<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Permissions">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="138dp"
            android:background="@color/yellow_signin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/background_image" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="124dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/permission"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/permissions_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/permissions"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/submitBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cameraLayout"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/steps_bg"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/smsLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/camera"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView17"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="0dp"
                android:layout_height="39dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="2dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/camera_summary"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent" />


        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/smsLayout"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/steps_bg"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/locationLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cameraLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/read_sms"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView15"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="2dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/read_sms_summary"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.074"
                app:layout_constraintStart_toStartOf="parent" />


        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/locationLayout"
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/steps_bg"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/smsLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/location"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView16"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="0dp"
                android:layout_height="51dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="2dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/location_summary"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.137"
                app:layout_constraintStart_toStartOf="parent" />


        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="234dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/step_one_button"
        android:fontFamily="@font/montserrat"
        android:text="@string/grant"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>